# rust-fundamentals-playground

./: .editorconfig  .gitattributes  Cargo.toml  README.md  rustfmt.toml
async-basics/: Cargo.toml  README.md
async-basics/src/: lib.rs  main.rs
concurrency/: Cargo.toml  README.md
concurrency/src/: channels.rs  lib.rs  shared_state.rs  threads.rs
fundamentals/: Cargo.toml  README.md
fundamentals/src/: borrowing.rs  collections.rs  enums.rs  error_handling.rs  functions_control_flow.rs  iterators.rs  lib.rs  ownership.rs  pattern_matching.rs  slices.rs  strings.rs  structs.rs  variables.rs
fundamentals/tests/: learning_checks.rs
projects/calc/: Cargo.toml  README.md
projects/calc/src/: lib.rs  main.rs
projects/config-loader/: Cargo.toml  README.md  app.example.toml
projects/config-loader/src/: lib.rs  main.rs
projects/csv-parser/: Cargo.toml  README.md  people.csv
projects/csv-parser/src/: lib.rs  main.rs
projects/http-client/: Cargo.toml  README.md
projects/http-client/src/: lib.rs  main.rs
projects/log-parser/: Cargo.toml  README.md
projects/log-parser/src/: lib.rs  main.rs
projects/todo/: Cargo.toml  README.md
projects/todo/src/: lib.rs  main.rs
