[workspace]
resolver = "2"
members = [
    "fundamentals",
    "intermediate",
    "concurrency",
    "projects/calc",
    "projects/todo",
    "projects/config-loader",
    "projects/csv-parser",
    "projects/log-parser",
]

[workspace.package]
edition = "2021"

# Shared dependency versions. Individual crates opt in with
# `serde = { workspace = true }` so the whole workspace stays on
# one version of each library.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
